cvs/ports/devel/argp-standalone/Makefile,v
head	1.7;
access;
symbols
	OPENBSD_6_1:1.5.0.4
	OPENBSD_6_1_BASE:1.5
	OPENBSD_6_0:1.5.0.2
	OPENBSD_6_0_BASE:1.5
	OPENBSD_5_9:1.4.0.10
	OPENBSD_5_9_BASE:1.4
	OPENBSD_5_8:1.4.0.12
	OPENBSD_5_8_BASE:1.4
	OPENBSD_5_7:1.4.0.8
	OPENBSD_5_7_BASE:1.4
	OPENBSD_5_6:1.4.0.6
	OPENBSD_5_6_BASE:1.4
	OPENBSD_5_5:1.4.0.4
	OPENBSD_5_5_BASE:1.4
	OPENBSD_5_4:1.4.0.2
	OPENBSD_5_4_BASE:1.4
	OPENBSD_5_3:1.3.0.2
	OPENBSD_5_3_BASE:1.3
	OPENBSD_5_2:1.2.0.2
	OPENBSD_5_2_BASE:1.2
	OPENBSD_5_1_BASE:1.1.1.1
	OPENBSD_5_1:1.1.1.1.0.18
	OPENBSD_5_0:1.1.1.1.0.16
	OPENBSD_5_0_BASE:1.1.1.1
	OPENBSD_4_9:1.1.1.1.0.14
	OPENBSD_4_9_BASE:1.1.1.1
	OPENBSD_4_8:1.1.1.1.0.12
	OPENBSD_4_8_BASE:1.1.1.1
	OPENBSD_4_7:1.1.1.1.0.10
	OPENBSD_4_7_BASE:1.1.1.1
	OPENBSD_4_6:1.1.1.1.0.8
	OPENBSD_4_6_BASE:1.1.1.1
	OPENBSD_4_5:1.1.1.1.0.6
	OPENBSD_4_5_BASE:1.1.1.1
	OPENBSD_4_4:1.1.1.1.0.4
	OPENBSD_4_4_BASE:1.1.1.1
	OPENBSD_4_3:1.1.1.1.0.2
	OPENBSD_4_3_BASE:1.1.1.1
	wilfried-20071025:1.1.1.1
	wilfried:1.1.1;
locks; strict;
comment	@# @;


1.7
date	2017.09.25.09.16.12;	author robert;	state Exp;
branches;
next	1.6;
commitid	xOeDnABBxynvFYIF;

1.6
date	2017.04.16.19.51.09;	author sthen;	state Exp;
branches;
next	1.5;
commitid	wnCaGwV8xqB1k2wQ;

1.5
date	2016.03.11.19.59.12;	author naddy;	state Exp;
branches;
next	1.4;
commitid	pguKLBEFv33DrgKU;

1.4
date	2013.03.11.10.50.00;	author espie;	state Exp;
branches;
next	1.3;

1.3
date	2012.12.13.16.34.48;	author naddy;	state Exp;
branches;
next	1.2;

1.2
date	2012.03.29.13.38.13;	author sthen;	state Exp;
branches;
next	1.1;

1.1
date	2007.10.25.18.13.16;	author wilfried;	state Exp;
branches
	1.1.1.1;
next	;

1.1.1.1
date	2007.10.25.18.13.16;	author wilfried;	state Exp;
branches;
next	;


desc
@@


1.7
log
@Unbreak autoconf checks with clang by not using nested functions
in the checks.

Someone clearly did not read the autoconf documentation because
using the following functions with a function declaration inside
the body will end up declaring a function inside a function.

- AC_TRY_COMPILE( [], [ int main() { return 0; } ],
- AC_LANG_PROGRAM([[]], [[int main (void) { return 0; }]])],
- AC_TRY_LINK([], [int main (void) { return 0; }],

Result:

int
main ()
{
int main (void) { return 0; }
  ;
  return 0;
}

nested functions is a gcc extension which is not supported by
clang.

test.c:4:17: error: function definition is not allowed here
int main (void) { return 0; }
                ^
1 error generated.

This causes tests to fail in the configure scripts resulting in
missing compile and link time flags from the builds.

This resulted in weird behaviour of several software, like gnome
hanging completely due to gtk+3 not being built properly.

This change intrudces the following fixes:

- remove int main() declaration from AC_TRY_COMPILE, AC_LANG_PROGRAM, AC_TRY_LINK
  as it comes with a declaration already, and people misused them

- change to use AC_LANG_SOURCE when needed in case a complete source block is specified

Most of the changes are in configure.(ac|in), however there were some cases
where autoconf is either broken or the build failed because of an autoconf
generated configure script. Everytihng else is switched to autoconf, so
the maintainers can go ahead and upstream these diffs.

There are more to come, we are continously checking the tree for these issues
and in the future the infrastructure will error if such a case is found.
@
text
@# $OpenBSD: Makefile,v 1.6 2017/04/16 19:51:09 sthen Exp $

COMMENT=	standalone version of argument parsing functions from GLIBC

DISTNAME=		argp-standalone-1.3
REVISION=		2

CATEGORIES=		devel

# GPL
PERMIT_PACKAGE_CDROM=	Yes

MASTER_SITES=		http://www.lysator.liu.se/~nisse/misc/

SEPARATE_BUILD=		Yes
AUTOCONF_VERSION=	2.59
CONFIGURE_STYLE=	autoconf
CONFIGURE_ARGS+=	--disable-dependency-tracking
CFLAGS+=		--std=gnu89

do-install:
	${INSTALL_DATA} ${WRKBUILD}/libargp.a ${PREFIX}/lib
	${INSTALL_DATA} ${WRKSRC}/argp.h ${PREFIX}/include

.include <bsd.port.mk>
@


1.6
log
@use --std=gnu89
tweak COMMENT
@
text
@d1 1
a1 1
# $OpenBSD: Makefile,v 1.5 2016/03/11 19:59:12 naddy Exp $
d6 1
a6 1
REVISION=		1
d16 2
a17 1
CONFIGURE_STYLE=	gnu
@


1.5
log
@garbage collect CONFIGURE_SHARED
@
text
@d1 1
a1 1
# $OpenBSD: Makefile,v 1.4 2013/03/11 10:50:00 espie Exp $
d3 1
a3 1
COMMENT=		Standalone version of arguments parsing functions from GLIBC
d6 1
a6 1
REVISION=		0
d18 1
@


1.4
log
@PERMIT_* / REGRESS->TEST sweep
@
text
@d1 1
a1 1
# $OpenBSD: Makefile,v 1.3 2012/12/13 16:34:48 naddy Exp $
a16 1
CONFIGURE_ARGS+=	${CONFIGURE_SHARED}
@


1.3
log
@remove Peter Stromberg as maintainer:
"I haven't used any of those ports myself for a long time, so I think it's
best you remove me as maintainer."
@
text
@d1 1
a1 1
# $OpenBSD: Makefile,v 1.2 2012/03/29 13:38:13 sthen Exp $
a11 3
PERMIT_PACKAGE_FTP=	Yes
PERMIT_DISTFILES_CDROM=	Yes
PERMIT_DISTFILES_FTP=	Yes
@


1.2
log
@Change SEPARATE_BUILD=(concurrent|simple) to Yes; bsd.port.mk doesn't
make a distinction between these.  ok aja@@ dcoppa@@
@
text
@d1 1
a1 1
# $OpenBSD: Makefile,v 1.1.1.1 2007/10/25 18:13:16 wilfried Exp $
d6 1
a8 2

MAINTAINER=		Peter Stromberg <wilfried@@openbsd.org>
@


1.1
log
@Initial revision
@
text
@d1 1
a1 1
# $OpenBSD: Makefile.template,v 1.53 2007/09/17 09:44:42 ajacoutot Exp $
d19 1
a19 1
SEPARATE_BUILD=		concurrent
@


1.1.1.1
log
@import of argp-standalone-1.3

Standalone version of arguments parsing functions from GLIBC
@
text
@@
